[package]
name = "rust-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = { version = "0.8.2", features = [] }
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
